--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -13,7 +13,7 @@ jobs:
         sudo -H pip3 install pillow
     - name: Run data building scripts
       run: |
-        ./scripts/summary.py block.js.gz"
+        ./scripts/summary.py block.js.gz
     - name: Generate release tag
       id: tag
       run: |
